Added first implementation of dashbord that shows all currently registered cars.

--- a/dashboard/src/app/car-list/car-list.component.html
+++ b/dashboard/src/app/car-list/car-list.component.html
@@ -1,4 +1,21 @@
-<p>car-list works!</p>
-<div>
+<mat-grid-list cols="4">
+  <mat-grid-tile colspan="1" class="lightblue">
+    <button mat-icon-button color="primary" aria-label="reload" (click)="getCars()">
+      <mat-icon>refresh</mat-icon>
+    </button>
 
-</div>
+    <mat-list #carsList *ngIf="cars">
+      @for (car of cars; track car) {
+        <mat-list-item>
+          <span matListItemTitle>{{car.oem}} {{car.model}} ({{car.vin}})</span>
+          <span *ngIf="car.is_self_driving" matListItemLine>Self-driving car</span>
+        </mat-list-item>
+        <mat-divider></mat-divider>
+      }
+    </mat-list>
+  </mat-grid-tile>
+
+  <mat-grid-tile colspan="3">
+    TODO visualization of cars.
+  </mat-grid-tile>
+</mat-grid-list>
