--- a/dashboard/src/app/car-list/car-list.component.css
+++ b/dashboard/src/app/car-list/car-list.component.css
@@ -1,3 +1,19 @@
 .lightblue {
   background: aliceblue;
 }
+
+.road {
+  background: lightgrey;
+}
+
+.meadow {
+  background: forestgreen;
+}
+
+.height800 {
+  height: 800px;
+}
+
+.width620 {
+  width: 620px;
+}
