--- a/dashboard/src/app/car-list/car-list.component.css
+++ b/dashboard/src/app/car-list/car-list.component.css
@@ -14,6 +14,10 @@
   height: 800px;
 }
 
-.width620 {
-  width: 620px;
+.width640 {
+  width: 640px;
+}
+
+.gridList {
+  background-color: #c3e6c3;
 }
