--- a/dashboard/src/app/car-list/car-list.component.html
+++ b/dashboard/src/app/car-list/car-list.component.html
@@ -12,13 +12,18 @@
         </mat-list-item>
         <mat-divider></mat-divider>
       }
+      <mat-list-item>
+        <button mat-icon-button color="primary" aria-label="reload" (click)="enable=true">
+          <mat-icon>refresh</mat-icon>
+        </button>
+      </mat-list-item>
     </mat-list>
   </mat-grid-tile>
 
   <mat-grid-tile colspan="2" class="meadow"></mat-grid-tile>
 
   <mat-grid-tile colspan="5">
-    <app-car-svg *ngIf="cars" class="height800 width640" [cars]="cars"></app-car-svg>
+    <app-car-svg *ngIf="cars" class="height800 width640" [carList]="cars"></app-car-svg>
   </mat-grid-tile>
 
   <mat-grid-tile colspan="2" class="meadow"></mat-grid-tile>
