Improved Simulation. Added nice pictures in the frontend (copyright free!!).

--- a/dashboard/src/app/car-list/car-list.component.html
+++ b/dashboard/src/app/car-list/car-list.component.html
@@ -20,11 +20,15 @@
     </mat-list>
   </mat-grid-tile>
 
-  <mat-grid-tile colspan="2" class="meadow"></mat-grid-tile>
+  <mat-grid-tile colspan="2" class="meadow">
+    <img class="rotate90" height="1000" src="https://cdn.pixabay.com/photo/2016/11/29/02/25/forest-1866837_1280.jpg">
+  </mat-grid-tile>
 
   <mat-grid-tile colspan="5">
     <app-car-svg *ngIf="cars" class="height800 width640" [carList]="cars"></app-car-svg>
   </mat-grid-tile>
 
-  <mat-grid-tile colspan="2" class="meadow"></mat-grid-tile>
+  <mat-grid-tile colspan="2" class="meadow">
+    <img class="rotate90" height="1000" src="https://cdn.pixabay.com/photo/2016/11/29/02/25/forest-1866837_1280.jpg">
+  </mat-grid-tile>
 </mat-grid-list>
