--- a/dashboard/src/app/car-list/car-list.component.html
+++ b/dashboard/src/app/car-list/car-list.component.html
@@ -1,3 +1,7 @@
+<h1 class="center center-text">{{ title }}</h1>
+
+<app-navigation></app-navigation>
+
 <mat-grid-list cols="12" rowHeight="800px" gutterSize="10px" class="gridList">
   <mat-grid-tile colspan="3" class="lightblue">
     <button mat-icon-button color="primary" aria-label="reload" (click)="getCars()">
