--- a/dashboard/src/app/eventlog/eventlog.component.css
+++ b/dashboard/src/app/eventlog/eventlog.component.css
@@ -1,9 +1,17 @@
 .center {
   margin: auto;
   width: 50%;
-  padding: 50px;
+  padding: 20px;
 }
 
 .center-text {
   text-align: center;
+}
+
+.table {
+  width: 100%;
+}
+
+.spinner {
+  margin: auto;
 }
